tests/NormalTests/paczka1/fuzzy1/43914160.err
Error in line 12: FCQaym64m A15 73,7
Error in line 18: FCQaym64m S470 29,4
Error in line 25: aICk43OIMJ9 S470 13,7
Error in line 23: WNA S470 55,6
Error in line 27: tWxRjPy S470 51,9
Error in line 35: WNA A15 97,9
